tests/parser/errors/while.rv
while true 1+1
while {true} var a: int
